--- a/user/challenges/includes/sidebar.html
+++ b/user/challenges/includes/sidebar.html
@@ -86,7 +86,7 @@
             <span class="undone-icon"
               ><i class="fas fa-lock" style="color: black"></i
             ></span>
-            <span class="hide-menu">Investment Portfolio Diversification</span>
+            <span class="hide-menu">Portfolio Diversification</span>
           </a>
         </li>
         <li class="sidebar-item">
