--- a/user/challenges/includes/sidebar.html
+++ b/user/challenges/includes/sidebar.html
@@ -239,8 +239,7 @@
               Subscribe to plan
             </h6>
             <a
-              href=""
-              target="_blank"
+              href="../../user/challenges/choose_plan.php"
               class="btn btn-primary fs-2 fw-semibold lh-sm"
               >Subscribe</a
             >
